# attendance_logger

./: .gitignore  README.md  app.py  pyproject.toml
attendance_logger/: __init__.py  config.py
attendance_logger/blueprints/auth/: routes_v1.py
attendance_logger/blueprints/common/: decorators.py
attendance_logger/models/: database.py  db_models.py  models.py
attendance_logger/schemes/: api.py  auth_v1.py  responses.py
attendance_logger/services/: contracts.py
attendance_logger/utils/: auth.py  communication.py  utils.py
docs/api/: api-protocol_v1.md
tests/: test_utils.py
tests/test_services/: test_contracts.py
tests/test_utils/: test_auth.py  test_utils.py
